Add Model_Solution ipynb file
Add Model_Solution ipynb file which records the procedure of our solution.

--- a/Model_Solution.ipynb
+++ b/Model_Solution.ipynb
@@ -67,7 +67,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import pylab as pl\n",
     "\n",
     "pl.title('love vs. follower')# give plot a title\n",
@@ -103,7 +102,6 @@
     }
    ],
    "source": [
-    "import matplotlib.mlab as mlab    \n",
     "import matplotlib.pyplot as plt \n",
     "\n",
     "myset = set(x)\n",
@@ -332,20 +330,15 @@
    },
    "outputs": [],
    "source": [
-    "import densenet\n",
-    "import tensorflow as tf\n",
-    "import cv2\n",
     "import numpy as np\n",
     "import h5py\n",
     "import os\n",
-    "from keras.layers import Input\n",
     "from keras.models import Model\n",
     "import keras\n",
     "from keras.callbacks import EarlyStopping ,ModelCheckpoint\n",
-    "from keras import losses\n",
+    "#from keras import losses\n",
     "from keras.regularizers import l2\n",
-    "from keras.layers import Activation,Dense,Dropout,Embedding,Flatten,Input,merge,Convolution2D,MaxPooling2D,Convolution1D,MaxPooling1D,merge,Reshape\n",
-    "import os\n",
+    "from keras.layers import Activation,Dense,Dropout,Flatten,Input\n",
     "from keras.utils.np_utils import to_categorical\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
