Add Model_Solution ipynb file
Add Model_Solution ipynb file which records our solution of the SELFIE project

--- a/Model_Solution.ipynb
+++ b/Model_Solution.ipynb
@@ -188,19 +188,10 @@
    "outputs": [],
    "source": [
     "#from __future__ import print_function\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import os\n",
     "import sys\n",
-    "from IPython.display import display\n",
     "import requests\n",
     "import Image\n",
-    "from io import BytesIO\n",
-    "import h5py\n",
-    "from threading import Thread, Lock\n",
-    "\n",
-    "# Config the matplotlib backend as plotting inline in IPython\n",
-    "%matplotlib inline"
+    "from io import BytesIO"
    ]
   },
   {
